--- a/goods-service/src/main/resources/application.yml
+++ b/goods-service/src/main/resources/application.yml
@@ -3,8 +3,81 @@ server:
 
 
 spring:
+  # Druid连接池配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/practice_17
     username: root
     password: root
+
+    druid:
+      # 初始连接数
+      initialSize: 5
+      # 最小连接池数量
+      minIdle: 5
+      # 最大连接池数量
+      maxActive: 20
+      # 配置获取连接等待超时的时间
+      maxWait: 60000
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      timeBetweenEvictionRunsMillis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      minEvictableIdleTimeMillis: 300000
+      # 配置一个连接在池中最大生存的时间，单位是毫秒
+      maxEvictableIdleTimeMillis: 900000
+      # 配置检测连接是否有效
+      validationQuery: SELECT 1
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      # 打开PSCache，并且指定每个连接上PSCache的大小
+      poolPreparedStatements: true
+      maxPoolPreparedStatementPerConnectionSize: 20
+      # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+      filters: stat,wall,slf4j
+      # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+      connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
+      # 配置DruidStatFilter
+      webStatFilter:
+        enabled: true
+        url-pattern: "/*"
+        exclusions: "*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*"
+      # 合并多个DruidDataSource的数据
+      use-global-data-source-stat: true
+      # Spring拦截记录
+      aop-patterns:
+        - com.javaweb.*.mapper.*
+      # 配置DruidStatViewServlet
+      filter:
+        stat:
+          enabled: true
+          # 慢SQL记录
+          slow-sql-millis: 5000
+          log-slow-sql: true
+          merge-sql: true
+        wall:
+          enabled: true
+          db-type: oracle
+          config:
+            drop-table-allow: false
+            truncate-allow: false
+            create-table-allow: false
+            alter-table-allow: false
+            # 是否必须参数化
+        #            must-parameterized:
+        slf4j:
+          # 不需要打印，mp已经做了这个事情
+          enabled: false
+      stat-view-servlet:
+        enabled: true
+        reset-enable: false
+        login-username: admin
+        login-password: 123456
+        url-pattern: /druid/*
+        #        allow:
+        #        deny:
+
+
+logging:
+  level:
+    com.qhy: debug
