--- a/goods-service/pom.xml
+++ b/goods-service/pom.xml
@@ -64,6 +64,13 @@
             <version>8.0.26</version>
         </dependency>
 
+        <!-- page helper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
         <!-- Spring Doc -->
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -108,6 +115,13 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
             <version>1.4.2.Final</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
             <scope>provided</scope>
         </dependency>
 
