--- a/goods-service/src/main/resources/application.yml
+++ b/goods-service/src/main/resources/application.yml
@@ -72,7 +72,7 @@ spring:
           merge-sql: true
         wall:
           enabled: true
-          db-type: oracle
+          db-type: mysql
           config:
             drop-table-allow: false
             truncate-allow: false
