--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -5,14 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.qhy</groupId>
-    <artifactId>goods-service</artifactId>
+    <artifactId>config-server</artifactId>
     <version>1.0.0</version>
 
-    <name>goods-service</name>
-    <packaging>jar</packaging>
-
     <properties>
-        <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <spring-cloud.version>2021.0.0</spring-cloud.version>
@@ -27,38 +23,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.qhy</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-client</artifactId>
-        </dependency>
-
-        <!-- mapStruct 核心注解 -->
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>1.4.2.Final</version>
-        </dependency>
-        <!-- mapStruct生成处理器  MD，谁说IDEA高版本不需要配置这个，不配置这个就不会生成setter方法 -->
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-processor</artifactId>
-            <version>1.4.2.Final</version>
-            <scope>provided</scope>
-        </dependency>
-
     </dependencies>
-
-
 
     <dependencyManagement>
         <dependencies>
@@ -72,16 +44,4 @@
         </dependencies>
     </dependencyManagement>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <fork>true</fork>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
