--- a/goods-feign/pom.xml
+++ b/goods-feign/pom.xml
@@ -5,14 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.qhy</groupId>
-    <artifactId>goods-service</artifactId>
+    <artifactId>goods-feign</artifactId>
     <version>1.0.0</version>
 
-    <name>goods-service</name>
-    <packaging>jar</packaging>
-
     <properties>
-        <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <spring-cloud.version>2021.0.0</spring-cloud.version>
@@ -27,10 +23,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.qhy</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0.0</version>
-            <optional>true</optional>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
         </dependency>
 
         <dependency>
@@ -39,27 +42,24 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-client</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.79</version>
         </dependency>
 
-        <!-- mapStruct 核心注解 -->
         <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>1.4.2.Final</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
         </dependency>
-        <!-- mapStruct生成处理器  MD，谁说IDEA高版本不需要配置这个，不配置这个就不会生成setter方法 -->
+
         <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-processor</artifactId>
-            <version>1.4.2.Final</version>
-            <scope>provided</scope>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-http</artifactId>
+            <version>5.7.18</version>
         </dependency>
 
     </dependencies>
-
-
 
     <dependencyManagement>
         <dependencies>
@@ -78,10 +78,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <fork>true</fork>
-                    <skip>true</skip>
-                </configuration>
             </plugin>
         </plugins>
     </build>
