--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -2,25 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.qhy</groupId>
-    <artifactId>eureka-server</artifactId>
-    <version>1.0.0</version>
+    <parent>
+        <groupId>cn.qhy</groupId>
+        <artifactId>dependency-management</artifactId>
+        <version>1.0.0</version>
+        <relativePath>../dependency-management/pom.xml</relativePath>
+    </parent>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <spring-cloud.version>2021.0.0</spring-cloud.version>
-    </properties>
+    <artifactId>eureka-server</artifactId>
+    <name>eureka-server</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -28,18 +21,5 @@
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
     </dependencies>
-
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
 </project>
