--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -4,7 +4,6 @@ server:
 spring:
   application:
     name: config-server
-
   cloud:
     config:
       server:
@@ -15,6 +14,17 @@ spring:
           clone-on-start: true
 
 eureka:
+  instance:
+    health-check-url-path: /actuator/health
   client:
     service-url:
       defaultZone: http://localhost:8001/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: ALWAYS
