--- a/goods-service/pom.xml
+++ b/goods-service/pom.xml
@@ -33,17 +33,20 @@
             <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- mapStruct 核心注解 -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.4.2.Final</version>
         </dependency>
         <!-- mapStruct生成处理器  MD，谁说IDEA高版本不需要配置这个，不配置这个就不会生成setter方法 -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
-            <version>1.4.2.Final</version>
             <scope>provided</scope>
         </dependency>
 
