--- a/dependency-management/pom.xml
+++ b/dependency-management/pom.xml
@@ -51,7 +51,12 @@
                 <artifactId>spring-boot-starter-security</artifactId>
                 <version>2.6.2</version>
             </dependency>
-
+            <!-- spring-cloud-starter-zipkin中已经包含了Spring Cloud Sleuth依赖 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-zipkin</artifactId>
+                <version>2.2.8.RELEASE</version>
+            </dependency>
 
 
             <dependency>
