--- a/goods-feign/src/main/resources/application.yml
+++ b/goods-feign/src/main/resources/application.yml
@@ -7,6 +7,15 @@ spring:
   application:
     name: goods-feign
 
+  zipkin:
+    base-url: http://localhost:9411
+    #让nacos把它当成一个URL，而不要当做服务名
+    discovery-client-enabled: false
+  sleuth:
+    sampler:
+      # 设置Sleuth的抽样收集概率
+      probability: 0.1
+
 eureka:
   instance:
     health-check-url-path: /actuator/health
@@ -30,6 +39,8 @@ feign:
 logging:
   level:
     cn.qhy: debug
+    org.springframework.cloud.openfeign: debug
+    org.springframework.cloud.sleuth: debug
 
 management:
   endpoints:
