--- a/goods-service/pom.xml
+++ b/goods-service/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
         <!-- mapStruct 核心注解 -->
         <dependency>
             <groupId>org.mapstruct</groupId>
