--- a/common/pom.xml
+++ b/common/pom.xml
@@ -62,13 +62,8 @@
         <!-- Spring Doc -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-springdoc-ui</artifactId>
-            <version>3.0.3</version>
+            <artifactId>springdoc-openapi-webmvc-core</artifactId>
+            <version>1.6.4</version>
         </dependency>
 
         <!-- lombok -->
